--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="Anger">Anger</string>
     <string name="Fear">Fear</string>
     <string name="Sadness">Sadness</string>
+    <string name="EnterCommentHere">Enter comment here</string>
+    <string name="Submit">Submit</string>
+    <string name="EditEmotion">Edit Emotion</string>
 </resources>
