--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="EnterCommentHere">Enter comment here</string>
     <string name="Submit">Submit</string>
     <string name="EditEmotion">Edit Emotion</string>
+    <string name="EnterTime">Enter Time</string>
+    <string name="EnterDate">Enter Date</string>
 </resources>
