--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="EditEmotion">Edit Emotion</string>
     <string name="EnterTime">Enter Time</string>
     <string name="EnterDate">Enter Date</string>
+    <string name="DeleteEmotion">Delete Emotion</string>
 </resources>
